TAD-T1137 fixed on ios devices and upgraded to 7.0.8

--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -46,6 +46,16 @@
       display: flex;
       margin-left: 20px;
       flex: 1 0 auto;
+
+      .mat-select {
+        width: 115px;
+      }
+
+      @media only screen and (max-width: 400px) {
+        .cancel-btn {
+          padding: 0;
+        }
+      }
     }
 
     .action {
